--- a/index.html
+++ b/index.html
@@ -1,31 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Free Wi-Fi</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Access Lock</title>
+  <link rel="stylesheet" href="styles.css" />
+  <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+      height: 100vh;
+      background: radial-gradient(circle at top, #00111d, #000);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: 'Poppins', sans-serif;
+    }
+
+    /* Floating glass card */
+    .lock-box {
+      position: relative;
+      z-index: 2;
+      text-align: center;
+      padding: 50px 70px;
+      border-radius: 20px;
+      background: rgba(255, 255, 255, 0.05);
+      backdrop-filter: blur(20px);
+      box-shadow: 0 0 40px rgba(0,255,255,0.4);
+      animation: float 3s ease-in-out infinite alternate;
+    }
+
+    .lock-box h1 {
+      color: #00e6ff;
+      margin-bottom: 10px;
+      text-shadow: 0 0 15px cyan;
+    }
+
+    .lock-box p {
+      color: #bbb;
+      margin-bottom: 18px;
+      letter-spacing: 1px;
+    }
+
+    .lock-box input {
+      width: 150px;
+      text-align: center;
+      font-size: 28px;
+      padding: 10px;
+      border: none;
+      border-radius: 10px;
+      outline: none;
+      letter-spacing: 6px;
+      background: rgba(255,255,255,0.1);
+      color: #fff;
+      box-shadow: inset 0 0 10px rgba(0,255,255,0.3);
+    }
+
+    .lock-box input:focus {
+      box-shadow: 0 0 25px cyan;
+    }
+
+    .lock-box button {
+      background: #00e6ff;
+      border: none;
+      padding: 10px 30px;
+      font-size: 16px;
+      font-weight: bold;
+      border-radius: 10px;
+      margin-top: 18px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .lock-box button:hover {
+      transform: scale(1.1);
+      background: #00b7cc;
+    }
+
+    .message {
+      margin-top: 12px;
+      font-weight: 600;
+      color: #ff5555;
+    }
+
+    @keyframes float {
+      from { transform: translateY(-6px); }
+      to { transform: translateY(6px); }
+    }
+
+    /* Subtle static glowing background (no animation) */
+    .static-bg {
+      position: fixed;
+      inset: 0;
+      z-index: 0;
+      background: radial-gradient(circle at 30% 30%, rgba(0,255,255,0.25), transparent 40%),
+                  radial-gradient(circle at 70% 70%, rgba(0,150,255,0.25), transparent 40%),
+                  #00111d;
+    }
+  </style>
 </head>
 <body>
+  <div class="static-bg"></div>
 
-  <header class="mini-header">
-    <h2>🌐 Free Wi-Fi</h2>
-  </header>
+  <div class="lock-box">
+    <h1>🔐 Enter Access Code</h1>
+    <p>4-digit PIN required</p>
+    <input type="password" id="pin" maxlength="4" placeholder="••••" autofocus />
+    <br />
+    <button id="unlock">Unlock</button>
+    <div class="message" id="msg"></div>
+  </div>
 
-  <section class="hero">
-    <div class="hero-content">
-      <h1>Find Free Wi-Fi Near You</h1>
-      <p>Discover open networks around your city. Stay connected anytime, anywhere.</p>
-      <!-- Button -->
-      <a href="list.html" class="main-button">
-        📶 See Wi-Fi Passwords
-      </a>
-    </div>
-  </section>
+  <script>
+    // Lock logic
+    const correctPin = "7700"; // 🔑 change your 4-digit PIN here
+    const pinInput = document.getElementById("pin");
+    const msg = document.getElementById("msg");
 
-  <footer>
-    © 2025 Free Wi-Fi — Connecting the World
-  </footer>
+    document.getElementById("unlock").addEventListener("click", checkPin);
+    pinInput.addEventListener("keypress", e => {
+      if (e.key === "Enter") checkPin();
+    });
 
+    function checkPin() {
+      if (pinInput.value === correctPin) {
+        msg.style.color = "lime";
+        msg.textContent = "Access Granted ✅";
+        setTimeout(() => {
+          window.location.href = "home.html"; // go to your main site
+        }, 800);
+      } else {
+        msg.style.color = "#ff5555";
+        msg.textContent = "Wrong PIN ❌";
+        pinInput.value = "";
+        pinInput.focus();
+      }
+    }
+  </script>
 </body>
 </html>
