--- a/list.html
+++ b/list.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="mini-header">
-    <a href="index.html" class="back">← Home</a>
+    <a href="home.html" class="back">← Home</a>
     <h2>Nearby Hotspots</h2>
   </header>
 
